--- a/compose.yaml
+++ b/compose.yaml
@@ -1,13 +1,27 @@
 services:
-  database:
-    container_name: postgres_db
+  goapp: 
+    container_name: goapp
+    image: goapp:1.0.0
+    build:
+      context: ./backend
+      dockerfile: go.dockerfile
+    environment:
+      - DATABASE_URL="postgres://postgres:postgres@db:5433/postgres?sslmode=disable"
+    ports:
+      - '8000:8000'
+    depends_on:
+      - db
+
+
+  db:
+    container_name: db
     image: postgres:13
     environment:
        POSTGRES_USER: postgres
        POST_PASSWORD: postgres
        POSTGRES_DB: postgres
     ports:
-      - 5432:5432
+      - 5433:5433
     volumes:
       - pgdata:/var/lib/postgresql/data
 volumes:
